--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <EditText
+        android:id="@+id/plainTextSecondNumberID"
+        android:layout_width="370dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:hint="Enter the second number..."
+        android:inputType="textPersonName"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plainTextFirstNumberID" />
+
+    <EditText
+        android:id="@+id/plainTextFirstNumberID"
+        android:layout_width="370dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="Enter the first number..."
+        android:inputType="textPersonName"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/plainTextSecondNumberID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewID"
+        android:layout_width="372dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="220dp"
+        android:text="RESULT: "
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="353dp"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plainTextSecondNumberID">
+
+        <LinearLayout
+            android:layout_width="274dp"
+            android:layout_height="59dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.632"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="1dp">
+
+            <Button
+                android:id="@+id/additionButtonID"
+                android:layout_width="61dp"
+                android:layout_height="46dp"
+                android:onClick="onClickAddition"
+                android:text="+"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/substractionButtonID"
+                android:layout_width="61dp"
+                android:layout_height="46dp"
+                android:onClick="onClickSubtraction"
+                android:text="-"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/multiplicationButtonID"
+                android:layout_width="61dp"
+                android:layout_height="46dp"
+                android:onClick="onClickMultiplication"
+                android:text="*"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/divideButtonID"
+                android:layout_width="61dp"
+                android:layout_height="46dp"
+                android:onClick="onClickDivide"
+                android:text="/"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
